--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">3.34</td>
+  
+
+<td class="col-md-4">1.49</td>
+  
+
+<td class="col-md-5">1.33</td>
+  
+
+<td class="col-md-6">1.16</td>
+  
+
+<td class="col-md-7">1.29</td>
+  
+
+<td class="col-md-8">0.71</td>
+  
+
+<td class="col-md-9">0.67</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
