--- a/index.html
+++ b/index.html
@@ -50,22 +50,22 @@
 <td class="col-md-3">3.25</td>
   
 
-<td class="col-md-4">1.55</td>
+<td class="col-md-4">1.56</td>
   
 
-<td class="col-md-5">1.34</td>
+<td class="col-md-5">1.35</td>
   
 
-<td class="col-md-6">1.46</td>
+<td class="col-md-6">1.40</td>
   
 
-<td class="col-md-7">1.49</td>
+<td class="col-md-7">1.66</td>
   
 
-<td class="col-md-8">1.80</td>
+<td class="col-md-8">1.86</td>
   
 
-<td class="col-md-9">0.36</td>
+<td class="col-md-9">0.89</td>
   
 s
 </tr>
@@ -74,24 +74,24 @@ s
 
 <tr>
     <td class="col-md-1">2</td>
-    <td class="col-md-2">BABA</td>
+    <td class="col-md-2">NBEV</td>
     
-<td class="col-md-3">4.93</td>
+<td class="col-md-3">5.16</td>
   
 
-<td class="col-md-4">4.95</td>
+<td class="col-md-4">14.58</td>
   
 
-<td class="col-md-5">1.75</td>
+<td class="col-md-5">1.53</td>
   
 
-<td class="col-md-6">1.12</td>
+<td class="col-md-6">0.94</td>
   
 
-<td class="col-md-7">0.81</td>
+<td class="col-md-7">0.68</td>
   
 
-<td class="col-md-8">1.50</td>
+<td class="col-md-8">1.10</td>
   
 
 <td class="col-md-9">0.25</td>
