--- a/index.html
+++ b/index.html
@@ -53,19 +53,48 @@
 <td class="col-md-4">1.56</td>
   
 
-<td class="col-md-5">1.36</td>
+<td class="col-md-5">1.34</td>
   
 
-<td class="col-md-6">1.42</td>
+<td class="col-md-6">1.45</td>
   
 
-<td class="col-md-7">1.37</td>
+<td class="col-md-7">1.29</td>
   
 
-<td class="col-md-8">1.71</td>
+<td class="col-md-8">1.48</td>
   
 
-<td class="col-md-9">1.75</td>
+<td class="col-md-9">0.80</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">QQQ</td>
+    
+<td class="col-md-3">2.78</td>
+  
+
+<td class="col-md-4">2.07</td>
+  
+
+<td class="col-md-5">1.40</td>
+  
+
+<td class="col-md-6">1.10</td>
+  
+
+<td class="col-md-7">1.54</td>
+  
+
+<td class="col-md-8">1.43</td>
+  
+
+<td class="col-md-9">0.50</td>
   
 s
 </tr>
