--- a/index.html
+++ b/index.html
@@ -50,22 +50,22 @@
 <td class="col-md-3">2.77</td>
   
 
-<td class="col-md-4">2.59</td>
+<td class="col-md-4">2.60</td>
   
 
-<td class="col-md-5">1.57</td>
+<td class="col-md-5">1.55</td>
   
 
-<td class="col-md-6">2.04</td>
+<td class="col-md-6">2.15</td>
   
 
-<td class="col-md-7">2.80</td>
+<td class="col-md-7">2.87</td>
   
 
-<td class="col-md-8">1.82</td>
+<td class="col-md-8">1.67</td>
   
 
-<td class="col-md-9">0.44</td>
+<td class="col-md-9">0.40</td>
   
 s
 </tr>
@@ -74,6 +74,35 @@ s
 
 <tr>
     <td class="col-md-1">2</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">3.39</td>
+  
+
+<td class="col-md-4">1.39</td>
+  
+
+<td class="col-md-5">1.11</td>
+  
+
+<td class="col-md-6">1.27</td>
+  
+
+<td class="col-md-7">1.89</td>
+  
+
+<td class="col-md-8">1.36</td>
+  
+
+<td class="col-md-9">1.67</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
     <td class="col-md-2">TSLA</td>
     
 <td class="col-md-3">3.08</td>
@@ -82,19 +111,19 @@ s
 <td class="col-md-4">1.67</td>
   
 
-<td class="col-md-5">1.38</td>
+<td class="col-md-5">1.37</td>
   
 
 <td class="col-md-6">2.10</td>
   
 
-<td class="col-md-7">1.52</td>
+<td class="col-md-7">1.42</td>
   
 
-<td class="col-md-8">0.78</td>
+<td class="col-md-8">0.76</td>
   
 
-<td class="col-md-9">0.67</td>
+<td class="col-md-9">0.75</td>
   
 s
 </tr>
