--- a/index.html
+++ b/index.html
@@ -50,22 +50,22 @@
 <td class="col-md-3">8.89</td>
   
 
-<td class="col-md-4">4.19</td>
+<td class="col-md-4">4.15</td>
   
 
-<td class="col-md-5">1.82</td>
+<td class="col-md-5">1.80</td>
   
 
-<td class="col-md-6">0.64</td>
+<td class="col-md-6">0.62</td>
   
 
-<td class="col-md-7">1.06</td>
+<td class="col-md-7">1.03</td>
   
 
-<td class="col-md-8">3.33</td>
+<td class="col-md-8">2.86</td>
   
 
-<td class="col-md-9">0.57</td>
+<td class="col-md-9">0.67</td>
   
 s
 </tr>
@@ -79,19 +79,19 @@ s
 <td class="col-md-3">3.29</td>
   
 
-<td class="col-md-4">1.46</td>
+<td class="col-md-4">1.45</td>
   
 
-<td class="col-md-5">1.23</td>
+<td class="col-md-5">1.27</td>
   
 
-<td class="col-md-6">1.59</td>
+<td class="col-md-6">1.61</td>
   
 
-<td class="col-md-7">2.10</td>
+<td class="col-md-7">2.00</td>
   
 
-<td class="col-md-8">1.29</td>
+<td class="col-md-8">1.46</td>
   
 
 <td class="col-md-9">1.67</td>
@@ -103,27 +103,56 @@ s
 
 <tr>
     <td class="col-md-1">3</td>
-    <td class="col-md-2">TSLA</td>
+    <td class="col-md-2">AAPL</td>
     
-<td class="col-md-3">2.99</td>
+<td class="col-md-3">2.56</td>
   
 
-<td class="col-md-4">1.76</td>
+<td class="col-md-4">2.28</td>
   
 
-<td class="col-md-5">1.56</td>
+<td class="col-md-5">1.62</td>
   
 
-<td class="col-md-6">1.82</td>
+<td class="col-md-6">1.22</td>
   
 
-<td class="col-md-7">1.08</td>
+<td class="col-md-7">0.83</td>
   
 
 <td class="col-md-8">1.00</td>
   
 
-<td class="col-md-9">1.11</td>
+<td class="col-md-9">0.33</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">4</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">2.99</td>
+  
+
+<td class="col-md-4">1.77</td>
+  
+
+<td class="col-md-5">1.59</td>
+  
+
+<td class="col-md-6">1.83</td>
+  
+
+<td class="col-md-7">1.07</td>
+  
+
+<td class="col-md-8">0.97</td>
+  
+
+<td class="col-md-9">1.00</td>
   
 s
 </tr>
