--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
 <td class="col-md-5">1.66</td>
   
 
-<td class="col-md-6">1.77</td>
+<td class="col-md-6">1.78</td>
   
 
-<td class="col-md-7">0.92</td>
+<td class="col-md-7">0.94</td>
   
 
-<td class="col-md-8">0.81</td>
+<td class="col-md-8">0.91</td>
   
 
-<td class="col-md-9">0.38</td>
+<td class="col-md-9">0.62</td>
   
 s
 </tr>
@@ -82,19 +82,48 @@ s
 <td class="col-md-4">1.50</td>
   
 
-<td class="col-md-5">1.35</td>
+<td class="col-md-5">1.38</td>
   
 
-<td class="col-md-6">1.83</td>
+<td class="col-md-6">1.85</td>
   
 
-<td class="col-md-7">1.59</td>
+<td class="col-md-7">1.53</td>
   
 
-<td class="col-md-8">0.78</td>
+<td class="col-md-8">0.74</td>
   
 
 <td class="col-md-9">1.00</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
+    <td class="col-md-2">NIO</td>
+    
+<td class="col-md-3">8.93</td>
+  
+
+<td class="col-md-4">4.16</td>
+  
+
+<td class="col-md-5">1.58</td>
+  
+
+<td class="col-md-6">0.78</td>
+  
+
+<td class="col-md-7">1.34</td>
+  
+
+<td class="col-md-8">0.71</td>
+  
+
+<td class="col-md-9">0.25</td>
   
 s
 </tr>
