--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
 <td class="col-md-4">5.92</td>
   
 
-<td class="col-md-5">1.26</td>
+<td class="col-md-5">1.28</td>
   
 
 <td class="col-md-6">1.05</td>
   
 
-<td class="col-md-7">3.09</td>
+<td class="col-md-7">2.46</td>
   
 
 <td class="col-md-8">2.57</td>
   
 
-<td class="col-md-9">0.43</td>
+<td class="col-md-9">0.29</td>
   
 s
 </tr>
@@ -79,22 +79,80 @@ s
 <td class="col-md-3">2.87</td>
   
 
-<td class="col-md-4">1.94</td>
+<td class="col-md-4">1.95</td>
   
 
-<td class="col-md-5">1.69</td>
+<td class="col-md-5">1.72</td>
   
 
-<td class="col-md-6">1.29</td>
+<td class="col-md-6">1.24</td>
   
 
-<td class="col-md-7">0.86</td>
+<td class="col-md-7">0.88</td>
   
 
-<td class="col-md-8">0.90</td>
+<td class="col-md-8">0.97</td>
   
 
-<td class="col-md-9">0.83</td>
+<td class="col-md-9">1.00</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
+    <td class="col-md-2">NIO</td>
+    
+<td class="col-md-3">8.96</td>
+  
+
+<td class="col-md-4">4.34</td>
+  
+
+<td class="col-md-5">1.08</td>
+  
+
+<td class="col-md-6">0.90</td>
+  
+
+<td class="col-md-7">1.06</td>
+  
+
+<td class="col-md-8">0.89</td>
+  
+
+<td class="col-md-9">0.33</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">4</td>
+    <td class="col-md-2">QQQ</td>
+    
+<td class="col-md-3">2.59</td>
+  
+
+<td class="col-md-4">3.89</td>
+  
+
+<td class="col-md-5">2.46</td>
+  
+
+<td class="col-md-6">2.41</td>
+  
+
+<td class="col-md-7">0.90</td>
+  
+
+<td class="col-md-8">0.58</td>
+  
+
+<td class="col-md-9">1.00</td>
   
 s
 </tr>
