--- a/index.html
+++ b/index.html
@@ -50,22 +50,22 @@
 <td class="col-md-3">2.82</td>
   
 
-<td class="col-md-4">1.99</td>
+<td class="col-md-4">2.00</td>
   
 
-<td class="col-md-5">1.67</td>
+<td class="col-md-5">1.66</td>
   
 
-<td class="col-md-6">1.12</td>
+<td class="col-md-6">1.14</td>
   
 
-<td class="col-md-7">0.87</td>
+<td class="col-md-7">0.90</td>
   
 
-<td class="col-md-8">1.16</td>
+<td class="col-md-8">1.04</td>
   
 
-<td class="col-md-9">0.75</td>
+<td class="col-md-9">1.25</td>
   
 s
 </tr>
@@ -76,22 +76,51 @@ s
     <td class="col-md-1">2</td>
     <td class="col-md-2">AMZN</td>
     
-<td class="col-md-3">3.16</td>
+<td class="col-md-3">3.13</td>
   
 
 <td class="col-md-4">1.61</td>
   
 
-<td class="col-md-5">1.68</td>
+<td class="col-md-5">1.65</td>
   
 
-<td class="col-md-6">1.60</td>
+<td class="col-md-6">1.63</td>
   
 
-<td class="col-md-7">1.02</td>
+<td class="col-md-7">0.98</td>
   
 
-<td class="col-md-8">0.80</td>
+<td class="col-md-8">0.92</td>
+  
+
+<td class="col-md-9">0.67</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
+    <td class="col-md-2">FB</td>
+    
+<td class="col-md-3">1.38</td>
+  
+
+<td class="col-md-4">1.94</td>
+  
+
+<td class="col-md-5">2.52</td>
+  
+
+<td class="col-md-6">2.62</td>
+  
+
+<td class="col-md-7">1.62</td>
+  
+
+<td class="col-md-8">0.89</td>
   
 
 <td class="col-md-9">0.50</td>
