--- a/index.html
+++ b/index.html
@@ -50,22 +50,80 @@
 <td class="col-md-3">1.74</td>
   
 
-<td class="col-md-4">3.64</td>
+<td class="col-md-4">3.67</td>
   
 
-<td class="col-md-5">2.71</td>
+<td class="col-md-5">2.74</td>
   
 
-<td class="col-md-6">1.27</td>
+<td class="col-md-6">1.30</td>
   
 
-<td class="col-md-7">2.13</td>
+<td class="col-md-7">2.20</td>
+  
+
+<td class="col-md-8">4.50</td>
+  
+
+<td class="col-md-9">0.75</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">2.77</td>
+  
+
+<td class="col-md-4">2.00</td>
+  
+
+<td class="col-md-5">1.72</td>
+  
+
+<td class="col-md-6">0.99</td>
+  
+
+<td class="col-md-7">0.80</td>
+  
+
+<td class="col-md-8">0.76</td>
+  
+
+<td class="col-md-9">1.75</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
+    <td class="col-md-2">GE</td>
+    
+<td class="col-md-3">1.37</td>
+  
+
+<td class="col-md-4">1.93</td>
+  
+
+<td class="col-md-5">1.22</td>
+  
+
+<td class="col-md-6">3.40</td>
+  
+
+<td class="col-md-7">2.40</td>
   
 
 <td class="col-md-8">0.00</td>
   
 
-<td class="col-md-9">0.60</td>
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
