--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <td class="col-md-1">1</td>
     <td class="col-md-2">TSLA</td>
     
-<td class="col-md-3">2.71</td>
+<td class="col-md-3">2.70</td>
   
 
 <td class="col-md-4">2.03</td>
@@ -56,16 +56,16 @@
 <td class="col-md-5">1.62</td>
   
 
-<td class="col-md-6">0.88</td>
+<td class="col-md-6">0.87</td>
   
 
-<td class="col-md-7">0.83</td>
+<td class="col-md-7">0.84</td>
   
 
-<td class="col-md-8">1.04</td>
+<td class="col-md-8">1.00</td>
   
 
-<td class="col-md-9">0.67</td>
+<td class="col-md-9">0.80</td>
   
 s
 </tr>
@@ -74,27 +74,27 @@ s
 
 <tr>
     <td class="col-md-1">2</td>
-    <td class="col-md-2">W</td>
+    <td class="col-md-2">AAPL</td>
     
-<td class="col-md-3">1.68</td>
+<td class="col-md-3">2.20</td>
   
 
-<td class="col-md-4">3.78</td>
+<td class="col-md-4">2.28</td>
   
 
-<td class="col-md-5">2.21</td>
+<td class="col-md-5">1.49</td>
   
 
-<td class="col-md-6">1.71</td>
+<td class="col-md-6">1.00</td>
   
 
-<td class="col-md-7">1.52</td>
+<td class="col-md-7">0.52</td>
   
 
-<td class="col-md-8">0.47</td>
+<td class="col-md-8">0.00</td>
   
 
-<td class="col-md-9">0.33</td>
+<td class="col-md-9">0.25</td>
   
 s
 </tr>
