--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">2.69</td>
+  
+
+<td class="col-md-4">2.02</td>
+  
+
+<td class="col-md-5">1.58</td>
+  
+
+<td class="col-md-6">0.81</td>
+  
+
+<td class="col-md-7">0.73</td>
+  
+
+<td class="col-md-8">0.88</td>
+  
+
+<td class="col-md-9">0.67</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
