--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <td class="col-md-3">1.67</td>
   
 
-<td class="col-md-4">3.93</td>
+<td class="col-md-4">3.83</td>
   
 
 <td class="col-md-5">2.57</td>
@@ -62,7 +62,7 @@
 <td class="col-md-7">1.85</td>
   
 
-<td class="col-md-8">2.60</td>
+<td class="col-md-8">1.83</td>
   
 
 <td class="col-md-9">1.00</td>
@@ -74,27 +74,27 @@ s
 
 <tr>
     <td class="col-md-1">2</td>
-    <td class="col-md-2">SNAP</td>
+    <td class="col-md-2">TSLA</td>
     
-<td class="col-md-3">4.63</td>
+<td class="col-md-3">2.69</td>
   
 
-<td class="col-md-4">2.03</td>
+<td class="col-md-4">2.02</td>
   
 
-<td class="col-md-5">1.28</td>
+<td class="col-md-5">1.61</td>
   
 
-<td class="col-md-6">1.62</td>
+<td class="col-md-6">0.79</td>
   
 
-<td class="col-md-7">0.70</td>
+<td class="col-md-7">0.75</td>
   
 
-<td class="col-md-8">0.62</td>
+<td class="col-md-8">0.66</td>
   
 
-<td class="col-md-9">0.33</td>
+<td class="col-md-9">1.33</td>
   
 s
 </tr>
