--- a/index.html
+++ b/index.html
@@ -47,22 +47,51 @@
     <td class="col-md-1">1</td>
     <td class="col-md-2">QQQ</td>
     
-<td class="col-md-3">2.41</td>
+<td class="col-md-3">2.40</td>
   
 
-<td class="col-md-4">4.53</td>
+<td class="col-md-4">4.55</td>
   
 
-<td class="col-md-5">3.00</td>
+<td class="col-md-5">3.02</td>
   
 
-<td class="col-md-6">0.81</td>
+<td class="col-md-6">0.82</td>
   
 
-<td class="col-md-7">0.92</td>
+<td class="col-md-7">0.95</td>
   
 
 <td class="col-md-8">1.44</td>
+  
+
+<td class="col-md-9">1.67</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">2.65</td>
+  
+
+<td class="col-md-4">1.99</td>
+  
+
+<td class="col-md-5">1.61</td>
+  
+
+<td class="col-md-6">0.69</td>
+  
+
+<td class="col-md-7">0.85</td>
+  
+
+<td class="col-md-8">1.00</td>
   
 
 <td class="col-md-9">1.00</td>
