--- a/index.html
+++ b/index.html
@@ -45,27 +45,27 @@
               
 <tr>
     <td class="col-md-1">1</td>
-    <td class="col-md-2">TSLA</td>
+    <td class="col-md-2">QQQ</td>
     
-<td class="col-md-3">2.62</td>
+<td class="col-md-3">2.42</td>
   
 
-<td class="col-md-4">1.98</td>
+<td class="col-md-4">4.68</td>
   
 
-<td class="col-md-5">1.58</td>
+<td class="col-md-5">2.95</td>
   
 
-<td class="col-md-6">0.67</td>
+<td class="col-md-6">0.78</td>
   
 
-<td class="col-md-7">0.77</td>
+<td class="col-md-7">0.90</td>
   
 
-<td class="col-md-8">1.27</td>
+<td class="col-md-8">2.38</td>
   
 
-<td class="col-md-9">0.67</td>
+<td class="col-md-9">1.50</td>
   
 s
 </tr>
