--- a/index.html
+++ b/index.html
@@ -56,16 +56,45 @@
 <td class="col-md-5">2.95</td>
   
 
-<td class="col-md-6">0.78</td>
+<td class="col-md-6">0.76</td>
   
 
-<td class="col-md-7">0.90</td>
+<td class="col-md-7">0.92</td>
   
 
-<td class="col-md-8">2.38</td>
+<td class="col-md-8">2.25</td>
   
 
-<td class="col-md-9">1.50</td>
+<td class="col-md-9">2.00</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">2.61</td>
+  
+
+<td class="col-md-4">1.98</td>
+  
+
+<td class="col-md-5">1.53</td>
+  
+
+<td class="col-md-6">0.68</td>
+  
+
+<td class="col-md-7">0.76</td>
+  
+
+<td class="col-md-8">1.25</td>
+  
+
+<td class="col-md-9">1.67</td>
   
 s
 </tr>
