--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">2.85</td>
+  
+
+<td class="col-md-4">1.60</td>
+  
+
+<td class="col-md-5">1.59</td>
+  
+
+<td class="col-md-6">0.50</td>
+  
+
+<td class="col-md-7">0.83</td>
+  
+
+<td class="col-md-8">1.60</td>
+  
+
+<td class="col-md-9">0.33</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
