--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">2.56</td>
+  
+
+<td class="col-md-4">1.96</td>
+  
+
+<td class="col-md-5">1.35</td>
+  
+
+<td class="col-md-6">0.68</td>
+  
+
+<td class="col-md-7">0.71</td>
+  
+
+<td class="col-md-8">1.17</td>
+  
+
+<td class="col-md-9">1.00</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
