--- a/index.html
+++ b/index.html
@@ -47,25 +47,54 @@
     <td class="col-md-1">1</td>
     <td class="col-md-2">TSLA</td>
     
-<td class="col-md-3">2.56</td>
+<td class="col-md-3">2.55</td>
   
 
 <td class="col-md-4">1.96</td>
   
 
-<td class="col-md-5">1.35</td>
+<td class="col-md-5">1.34</td>
   
 
 <td class="col-md-6">0.68</td>
   
 
-<td class="col-md-7">0.71</td>
+<td class="col-md-7">0.73</td>
   
 
-<td class="col-md-8">1.17</td>
+<td class="col-md-8">1.11</td>
   
 
 <td class="col-md-9">1.00</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">QQQ</td>
+    
+<td class="col-md-3">2.32</td>
+  
+
+<td class="col-md-4">4.79</td>
+  
+
+<td class="col-md-5">2.57</td>
+  
+
+<td class="col-md-6">0.69</td>
+  
+
+<td class="col-md-7">0.94</td>
+  
+
+<td class="col-md-8">0.39</td>
+  
+
+<td class="col-md-9">0.25</td>
   
 s
 </tr>
