--- a/index.html
+++ b/index.html
@@ -47,25 +47,54 @@
     <td class="col-md-1">1</td>
     <td class="col-md-2">AAPL</td>
     
-<td class="col-md-3">2.04</td>
+<td class="col-md-3">2.03</td>
   
 
-<td class="col-md-4">2.48</td>
+<td class="col-md-4">2.49</td>
   
 
-<td class="col-md-5">1.38</td>
+<td class="col-md-5">1.40</td>
   
 
-<td class="col-md-6">1.18</td>
+<td class="col-md-6">1.21</td>
   
 
-<td class="col-md-7">1.29</td>
+<td class="col-md-7">1.35</td>
   
 
-<td class="col-md-8">3.33</td>
+<td class="col-md-8">3.67</td>
   
 
-<td class="col-md-9">0.25</td>
+<td class="col-md-9">0.50</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">2.83</td>
+  
+
+<td class="col-md-4">1.63</td>
+  
+
+<td class="col-md-5">1.45</td>
+  
+
+<td class="col-md-6">0.47</td>
+  
+
+<td class="col-md-7">1.35</td>
+  
+
+<td class="col-md-8">1.38</td>
+  
+
+<td class="col-md-9">1.67</td>
   
 s
 </tr>
