--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 <td class="col-md-4">4.06</td>
   
 
-<td class="col-md-5">1.58</td>
+<td class="col-md-5">1.57</td>
   
 
-<td class="col-md-6">1.15</td>
+<td class="col-md-6">1.18</td>
   
 
 <td class="col-md-7">0.45</td>
@@ -65,7 +65,7 @@
 <td class="col-md-8">3.00</td>
   
 
-<td class="col-md-9">0.75</td>
+<td class="col-md-9">1.00</td>
   
 s
 </tr>
@@ -82,7 +82,7 @@ s
 <td class="col-md-4">1.64</td>
   
 
-<td class="col-md-5">1.47</td>
+<td class="col-md-5">1.44</td>
   
 
 <td class="col-md-6">0.49</td>
@@ -94,7 +94,7 @@ s
 <td class="col-md-8">1.62</td>
   
 
-<td class="col-md-9">1.25</td>
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
@@ -103,21 +103,50 @@ s
 
 <tr>
     <td class="col-md-1">3</td>
-    <td class="col-md-2">CGC</td>
+    <td class="col-md-2">TWTR</td>
     
-<td class="col-md-3">0.93</td>
+<td class="col-md-3">1.21</td>
   
 
-<td class="col-md-4">2.46</td>
+<td class="col-md-4">2.78</td>
   
 
-<td class="col-md-5">1.31</td>
+<td class="col-md-5">1.84</td>
   
 
-<td class="col-md-6">1.10</td>
+<td class="col-md-6">0.58</td>
   
 
-<td class="col-md-7">1.20</td>
+<td class="col-md-7">1.33</td>
+  
+
+<td class="col-md-8">1.25</td>
+  
+
+<td class="col-md-9">0.33</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">4</td>
+    <td class="col-md-2">TLT</td>
+    
+<td class="col-md-3">1.89</td>
+  
+
+<td class="col-md-4">5.18</td>
+  
+
+<td class="col-md-5">1.41</td>
+  
+
+<td class="col-md-6">1.67</td>
+  
+
+<td class="col-md-7">0.88</td>
   
 
 <td class="col-md-8">0.00</td>
