--- a/index.html
+++ b/index.html
@@ -45,27 +45,27 @@
               
 <tr>
     <td class="col-md-1">1</td>
-    <td class="col-md-2">W</td>
+    <td class="col-md-2">TSLA</td>
     
-<td class="col-md-3">1.38</td>
+<td class="col-md-3">2.49</td>
   
 
-<td class="col-md-4">4.21</td>
+<td class="col-md-4">1.92</td>
   
 
-<td class="col-md-5">1.71</td>
+<td class="col-md-5">1.14</td>
   
 
-<td class="col-md-6">0.93</td>
+<td class="col-md-6">0.68</td>
   
 
-<td class="col-md-7">0.95</td>
+<td class="col-md-7">0.83</td>
   
 
-<td class="col-md-8">5.33</td>
+<td class="col-md-8">1.11</td>
   
 
-<td class="col-md-9">0.75</td>
+<td class="col-md-9">1.67</td>
   
 s
 </tr>
@@ -79,22 +79,22 @@ s
 <td class="col-md-3">2.02</td>
   
 
-<td class="col-md-4">2.55</td>
+<td class="col-md-4">2.56</td>
   
 
-<td class="col-md-5">1.46</td>
+<td class="col-md-5">1.48</td>
   
 
-<td class="col-md-6">1.30</td>
+<td class="col-md-6">1.33</td>
   
 
-<td class="col-md-7">0.87</td>
+<td class="col-md-7">0.91</td>
   
 
-<td class="col-md-8">1.00</td>
+<td class="col-md-8">0.89</td>
   
 
-<td class="col-md-9">0.33</td>
+<td class="col-md-9">0.67</td>
   
 s
 </tr>
