--- a/index.html
+++ b/index.html
@@ -45,27 +45,27 @@
               
 <tr>
     <td class="col-md-1">1</td>
-    <td class="col-md-2">TSLA</td>
+    <td class="col-md-2">SQ</td>
     
-<td class="col-md-3">2.44</td>
+<td class="col-md-3">1.52</td>
   
 
-<td class="col-md-4">1.91</td>
+<td class="col-md-4">7.40</td>
   
 
-<td class="col-md-5">1.01</td>
+<td class="col-md-5">1.43</td>
   
 
-<td class="col-md-6">0.65</td>
+<td class="col-md-6">0.61</td>
   
 
-<td class="col-md-7">0.85</td>
+<td class="col-md-7">1.38</td>
   
 
-<td class="col-md-8">0.85</td>
+<td class="col-md-8">1.67</td>
   
 
-<td class="col-md-9">1.25</td>
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
