--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">2.77</td>
+  
+
+<td class="col-md-4">1.68</td>
+  
+
+<td class="col-md-5">1.38</td>
+  
+
+<td class="col-md-6">0.71</td>
+  
+
+<td class="col-md-7">2.12</td>
+  
+
+<td class="col-md-8">0.81</td>
+  
+
+<td class="col-md-9">1.00</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
