--- a/index.html
+++ b/index.html
@@ -47,25 +47,54 @@
     <td class="col-md-1">1</td>
     <td class="col-md-2">AMZN</td>
     
-<td class="col-md-3">2.79</td>
+<td class="col-md-3">2.78</td>
   
 
-<td class="col-md-4">1.71</td>
+<td class="col-md-4">1.72</td>
   
 
-<td class="col-md-5">1.20</td>
+<td class="col-md-5">1.21</td>
   
 
-<td class="col-md-6">0.89</td>
+<td class="col-md-6">0.94</td>
   
 
-<td class="col-md-7">2.47</td>
+<td class="col-md-7">2.59</td>
   
 
-<td class="col-md-8">1.23</td>
+<td class="col-md-8">1.33</td>
   
 
-<td class="col-md-9">1.67</td>
+<td class="col-md-9">2.00</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">AAPL</td>
+    
+<td class="col-md-3">1.97</td>
+  
+
+<td class="col-md-4">2.66</td>
+  
+
+<td class="col-md-5">1.31</td>
+  
+
+<td class="col-md-6">1.50</td>
+  
+
+<td class="col-md-7">1.29</td>
+  
+
+<td class="col-md-8">1.00</td>
+  
+
+<td class="col-md-9">0.67</td>
   
 s
 </tr>
