--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">2.76</td>
+  
+
+<td class="col-md-4">1.72</td>
+  
+
+<td class="col-md-5">1.14</td>
+  
+
+<td class="col-md-6">0.97</td>
+  
+
+<td class="col-md-7">2.53</td>
+  
+
+<td class="col-md-8">1.45</td>
+  
+
+<td class="col-md-9">1.00</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
