--- a/index.html
+++ b/index.html
@@ -45,27 +45,27 @@
               
 <tr>
     <td class="col-md-1">1</td>
-    <td class="col-md-2">QQQ</td>
+    <td class="col-md-2">AMZN</td>
     
-<td class="col-md-3">2.12</td>
+<td class="col-md-3">2.71</td>
   
 
-<td class="col-md-4">5.35</td>
+<td class="col-md-4">1.73</td>
   
 
-<td class="col-md-5">1.42</td>
+<td class="col-md-5">1.19</td>
   
 
-<td class="col-md-6">0.80</td>
+<td class="col-md-6">1.10</td>
   
 
-<td class="col-md-7">0.94</td>
+<td class="col-md-7">2.35</td>
   
 
-<td class="col-md-8">0.92</td>
+<td class="col-md-8">1.58</td>
   
 
-<td class="col-md-9">1.00</td>
+<td class="col-md-9">1.25</td>
   
 s
 </tr>
