--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@
 <td class="col-md-4">5.41</td>
   
 
-<td class="col-md-5">1.45</td>
+<td class="col-md-5">1.41</td>
   
 
 <td class="col-md-6">0.84</td>
   
 
-<td class="col-md-7">1.03</td>
+<td class="col-md-7">1.06</td>
   
 
-<td class="col-md-8">1.88</td>
+<td class="col-md-8">1.75</td>
   
 
 <td class="col-md-9">1.33</td>
@@ -74,6 +74,35 @@ s
 
 <tr>
     <td class="col-md-1">2</td>
+    <td class="col-md-2">AAPL</td>
+    
+<td class="col-md-3">1.97</td>
+  
+
+<td class="col-md-4">2.64</td>
+  
+
+<td class="col-md-5">1.45</td>
+  
+
+<td class="col-md-6">1.55</td>
+  
+
+<td class="col-md-7">1.22</td>
+  
+
+<td class="col-md-8">1.50</td>
+  
+
+<td class="col-md-9">0.75</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
     <td class="col-md-2">AMZN</td>
     
 <td class="col-md-3">2.70</td>
@@ -82,19 +111,19 @@ s
 <td class="col-md-4">1.71</td>
   
 
-<td class="col-md-5">1.15</td>
+<td class="col-md-5">1.17</td>
   
 
-<td class="col-md-6">1.10</td>
+<td class="col-md-6">1.12</td>
   
 
-<td class="col-md-7">2.14</td>
+<td class="col-md-7">1.91</td>
   
 
-<td class="col-md-8">1.50</td>
+<td class="col-md-8">1.38</td>
   
 
-<td class="col-md-9">0.29</td>
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
