--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
 <td class="col-md-3">2.15</td>
   
 
-<td class="col-md-4">2.11</td>
+<td class="col-md-4">2.14</td>
   
 
-<td class="col-md-5">1.32</td>
+<td class="col-md-5">1.35</td>
   
 
-<td class="col-md-6">1.28</td>
+<td class="col-md-6">1.33</td>
   
 
-<td class="col-md-7">1.88</td>
+<td class="col-md-7">2.00</td>
   
 
-<td class="col-md-8">2.25</td>
+<td class="col-md-8">3.33</td>
   
 
 <td class="col-md-9">0.25</td>
@@ -91,7 +91,7 @@ s
 <td class="col-md-7">1.06</td>
   
 
-<td class="col-md-8">2.12</td>
+<td class="col-md-8">2.00</td>
   
 
 <td class="col-md-9">1.00</td>
@@ -111,7 +111,7 @@ s
 <td class="col-md-4">2.65</td>
   
 
-<td class="col-md-5">1.45</td>
+<td class="col-md-5">1.50</td>
   
 
 <td class="col-md-6">1.33</td>
@@ -120,10 +120,10 @@ s
 <td class="col-md-7">1.53</td>
   
 
-<td class="col-md-8">1.71</td>
+<td class="col-md-8">1.38</td>
   
 
-<td class="col-md-9">0.20</td>
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
@@ -132,15 +132,44 @@ s
 
 <tr>
     <td class="col-md-1">4</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">2.65</td>
+  
+
+<td class="col-md-4">1.72</td>
+  
+
+<td class="col-md-5">1.12</td>
+  
+
+<td class="col-md-6">1.21</td>
+  
+
+<td class="col-md-7">1.65</td>
+  
+
+<td class="col-md-8">1.14</td>
+  
+
+<td class="col-md-9">0.33</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">5</td>
     <td class="col-md-2">TWTR</td>
     
 <td class="col-md-3">1.16</td>
   
 
-<td class="col-md-4">2.98</td>
+<td class="col-md-4">3.00</td>
   
 
-<td class="col-md-5">1.09</td>
+<td class="col-md-5">1.11</td>
   
 
 <td class="col-md-6">0.93</td>
