--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
     <td class="col-md-1">1</td>
     <td class="col-md-2">QQQ</td>
     
-<td class="col-md-3">2.13</td>
+<td class="col-md-3">2.12</td>
   
 
-<td class="col-md-4">5.57</td>
+<td class="col-md-4">5.58</td>
   
 
-<td class="col-md-5">1.27</td>
+<td class="col-md-5">1.26</td>
   
 
 <td class="col-md-6">1.00</td>
@@ -62,10 +62,39 @@
 <td class="col-md-7">1.50</td>
   
 
-<td class="col-md-8">2.00</td>
+<td class="col-md-8">1.83</td>
   
 
-<td class="col-md-9">0.50</td>
+<td class="col-md-9">0.60</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">2.60</td>
+  
+
+<td class="col-md-4">1.73</td>
+  
+
+<td class="col-md-5">1.01</td>
+  
+
+<td class="col-md-6">1.40</td>
+  
+
+<td class="col-md-7">1.33</td>
+  
+
+<td class="col-md-8">0.50</td>
+  
+
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
