--- a/index.html
+++ b/index.html
@@ -47,22 +47,51 @@
     <td class="col-md-1">1</td>
     <td class="col-md-2">QQQ</td>
     
-<td class="col-md-3">2.14</td>
+<td class="col-md-3">2.15</td>
   
 
-<td class="col-md-4">5.65</td>
+<td class="col-md-4">5.68</td>
   
 
-<td class="col-md-5">1.15</td>
+<td class="col-md-5">1.17</td>
   
 
-<td class="col-md-6">1.05</td>
+<td class="col-md-6">1.08</td>
   
 
-<td class="col-md-7">1.66</td>
+<td class="col-md-7">1.72</td>
   
 
-<td class="col-md-8">1.05</td>
+<td class="col-md-8">1.16</td>
+  
+
+<td class="col-md-9">0.50</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">GE</td>
+    
+<td class="col-md-3">1.20</td>
+  
+
+<td class="col-md-4">2.15</td>
+  
+
+<td class="col-md-5">1.76</td>
+  
+
+<td class="col-md-6">0.58</td>
+  
+
+<td class="col-md-7">0.83</td>
+  
+
+<td class="col-md-8">0.00</td>
   
 
 <td class="col-md-9">0.33</td>
