--- a/index.html
+++ b/index.html
@@ -53,19 +53,48 @@
 <td class="col-md-4">5.76</td>
   
 
-<td class="col-md-5">1.17</td>
+<td class="col-md-5">1.15</td>
   
 
 <td class="col-md-6">1.08</td>
   
 
-<td class="col-md-7">1.72</td>
+<td class="col-md-7">1.79</td>
   
 
-<td class="col-md-8">1.00</td>
+<td class="col-md-8">0.90</td>
   
 
-<td class="col-md-9">0.75</td>
+<td class="col-md-9">1.00</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">GE</td>
+    
+<td class="col-md-3">1.20</td>
+  
+
+<td class="col-md-4">2.22</td>
+  
+
+<td class="col-md-5">1.82</td>
+  
+
+<td class="col-md-6">0.63</td>
+  
+
+<td class="col-md-7">1.00</td>
+  
+
+<td class="col-md-8">0.00</td>
+  
+
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
