--- a/index.html
+++ b/index.html
@@ -50,22 +50,51 @@
 <td class="col-md-3">1.19</td>
   
 
-<td class="col-md-4">3.95</td>
+<td class="col-md-4">4.00</td>
   
 
-<td class="col-md-5">1.11</td>
+<td class="col-md-5">1.16</td>
   
 
-<td class="col-md-6">2.00</td>
+<td class="col-md-6">2.10</td>
   
 
-<td class="col-md-7">3.20</td>
+<td class="col-md-7">3.00</td>
   
 
-<td class="col-md-8">3.00</td>
+<td class="col-md-8">3.83</td>
   
 
-<td class="col-md-9">1.25</td>
+<td class="col-md-9">1.67</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">QQQ</td>
+    
+<td class="col-md-3">2.17</td>
+  
+
+<td class="col-md-4">5.88</td>
+  
+
+<td class="col-md-5">1.12</td>
+  
+
+<td class="col-md-6">1.27</td>
+  
+
+<td class="col-md-7">1.74</td>
+  
+
+<td class="col-md-8">0.82</td>
+  
+
+<td class="col-md-9">1.67</td>
   
 s
 </tr>
