--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">W</td>
+    
+<td class="col-md-3">1.28</td>
+  
+
+<td class="col-md-4">4.52</td>
+  
+
+<td class="col-md-5">1.12</td>
+  
+
+<td class="col-md-6">0.71</td>
+  
+
+<td class="col-md-7">0.52</td>
+  
+
+<td class="col-md-8">0.00</td>
+  
+
+<td class="col-md-9">0.33</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
